--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 ﻿AIPrj/.ipynb_checkpoints
 AIPrj/client_secret_459416120560-mr74j17vdijc9rtadkv5611t57g7477c.apps.googleusercontent.com.json
+*.json
